# docs/swagger.json
@@ -175,7 +175,16 @@
         "model.CCTVItem": {
             "type": "object",
             "properties": {
+                "aspect": {
+                    "type": "string"
+                },
+                "height": {
+                    "type": "integer"
+                },
                 "id": {
+                    "type": "string"
+                },
+                "image": {
                     "type": "string"
                 },
                 "latitude": {
@@ -189,6 +198,9 @@
                 },
                 "title": {
                     "type": "string"
+                },
+                "width": {
+                    "type": "integer"
                 }
             }
         },
