# internal/model/cctv_model.go
@@ -4,10 +4,14 @@ import "github.com/google/uuid"
 
 type CCTVItem struct {
 	Id        uuid.UUID `json:"id"`
-	Title     string    `json:"title" db:"title"`
-	Link      string    `json:"link" db:"link"`
-	Latitude  float64   `json:"latitude" db:"latitude"`
-	Longitude float64   `json:"longitude" db:"longitude"`
+	Title     string    `json:"title"`
+	Link      string    `json:"link"`
+	Latitude  float64   `json:"latitude"`
+	Longitude float64   `json:"longitude"`
+	Width     int       `json:"width"`
+	Height    int       `json:"height"`
+	Aspect    string    `json:"aspect"`
+	Image     string    `json:"image"`
 }
 
 type CCTVs []CCTVItem
